# rag-chatbot

./: README.md  package.json
backend/: db.py  embeddings.py  pyproject.toml  retrieval_raw.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/rag/: ingest.py  pipeline.py  retriever.py
backend/ingest/: ingest_raw.py
src/: proxy.ts
src/app/: globals.css  layout.tsx
src/app/api/eval/: route.ts
src/app/upload/: actions.ts
src/lib/: embeddings.ts  eval.ts
